# phosphorus_mk2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matte.oso
plugins/blender/: CMakeLists.txt  blender.cpp  import.hpp  session.cpp  session.hpp  sink.cpp  sink.hpp
plugins/blender/addon/: properties.py  ui.py
plugins/blender/blender/: mesh.hpp  shader.cpp  shader.hpp  texture.hpp  util.hpp
plugins/blender/phosphoros/: __init__.py  properties.py  renderer.py  ui.py
scripts/: build-blender  build-imath  build-ocio  build-oiio  build-openexr  build-osl
src/: bsdf.cpp  bsdf.hpp  buffer.cpp  buffer.hpp  core.cpp  film.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  options.hpp  sampling.cpp  sampling.hpp  scene.cpp  scene.hpp  state.hpp  test.cpp  triangle.hpp  xpu.cpp  xpu.hpp
src/accel/: bvh.cpp  bvh.hpp  triangle.hpp
src/accel/bvh/: binned_sah_builder.hpp  builder.hpp  node.hpp
src/accel/triangle/: watertight.hpp
src/bsdf/: #reflection.hpp#  disney.hpp  lambert.hpp  microfacet.hpp  oren_nayar.hpp  params.hpp  reflection.hpp  refraction.hpp  sheen.hpp
src/codecs/: scene.cpp  scene.hpp
src/codecs/scene/: alembic.hpp  entities.hpp  material.hpp  math.hpp
src/entities/: camera.hpp
src/film/: file.cpp  file.hpp
src/jobs/: tiles.hpp
src/kernels/cpu/: camera.hpp  deferred_shading_kernel.hpp  diffuse_shading_kernel.hpp  linear_bvh_kernel.cpp  linear_bvh_kernel.hpp  spt.hpp  stream_bvh_kernel.cpp  stream_bvh_kernel.hpp  trace.hpp
src/kernels/cpu/cameras/: realistic.hpp
src/kernels/cpu/detail/: stream.hpp
src/math/: aabb.hpp  config.hpp  fresnel.hpp  orthogonal_base.hpp  sampling.hpp  simd.hpp  soa.hpp  trigonometry.hpp  vector.hpp
src/math/simd/: aabb.hpp  float8.hpp  int8.hpp  matrix.hpp  sampling.hpp  vector.hpp
src/shaders/: Makefile  add_node.osl  background_node.osl  blackbody_node.osl  color_op_node.osl  color_ramp.h  color_ramp_node.osl  color_to_value.osl  colorspace.h  combine_node.osl  const_color_node.osl  diffuse_bsdf_node.osl  diffuse_emitter_node.osl  environment_node.osl  fresnel.h  fresnel_dielectric_node.osl  fresnel_node.osl  gamma_node.osl  glass_node.osl  glossy_bsdf_node.osl  hsv_node.osl  invert_node.osl  luminance_node.osl  material_node.osl  matte.osl  mix_closure_node.osl  mix_color_node.osl  mix_node.osl  musgrave_noise_3d_node.osl  noise.h  normal_map_node.osl  phosphorus.h  principled_bsdf_node.osl  random_noise_1d_node.osl  random_noise_2d_node.osl  random_noise_3d_node.osl  refraction_bsdf_node.osl  rgb_curves_node.osl  sheen_bsdf_node.osl  split_node.osl  (+6 more)
src/shaders/input/: artistic_ior_node.osl  backfacing_node.osl  facing_node.osl  incoming_node.osl  normal_node.osl  property_node.osl  raytype_node.osl  uv_node.osl
src/shaders/math/: add_node.osl  bias_node.osl  div_node.osl  max_node.osl  min_node.osl  mul_node.osl  sub_node.osl
src/shaders/vector/: dot_product_node.osl
src/utils/: algo.hpp  aligned_allocator.hpp  allocator.hpp  assert.hpp  buffer.hpp  color.hpp  compiler.hpp  filesystem.hpp  nocopy.hpp
src/xpu/: cpu.cpp  cpu.hpp  cuda.cpp  cuda.hpp
